~ Method for getting global move space fixed